Your awesome message

--- a/package.json
+++ b/package.json
@@ -1,32 +1,36 @@
 {
-  "name": "bao-nghi",
+  "homepage": "http://hoangdangcodecomplete.github.io/baonghi",
+  "name": "baonghi",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@frogress/line": "^1.2.2",
+    "@react-hook/window-size": "^3.1.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.85",
-    "@types/react": "^18.2.60",
-    "@types/react-dom": "^18.2.19",
+    "framer-motion": "^11.0.7",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
+    "react-h5-audio-player": "^3.9.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "use-sound": "^4.0.1",
+    "web-vitals": "^3.5.2"
   },
   "scripts": {
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
